# tspan

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.local  README.md  dev.sh  docker-build.sh  tspanrun  watch.sh  wydrun
.github/workflows/: docker.yml
docs/: backup-and-restore.md  multi-user-assessment.md
k8s/: cronjob-backup.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
scripts/: tspan-rofi-drun  wyd-rofi-drun
src/: auth.rs  db.rs  importer.rs  main.rs  markdown.rs  server.rs  stats.rs  svg_calendar.rs  tui.rs
tspan-ebpf/: .gitignore  Cargo.toml  README.md  build.rs
tspan-ebpf/ebpf/: main.bpf.c
tspan-ebpf/src/: buffer.rs  config.rs  ebpf.rs  event.rs  exporter.rs  filter.rs  main.rs  tracker.rs
tspan-tui/: Cargo.toml
tspan-tui/src/: api_types.rs  app.rs  main.rs
