[package]
name = "tspan-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["tspan-tui"]
resolver = "2"

[[bin]]
name = "tspan-backup"
path = "src/bin/backup.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
rusqlite = { version = "0.31", features = ["bundled", "backup", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
shlex = "1.3"
anyhow = "1"
parking_lot = "0.12"
ureq = "3"
