[package]
name = "tspan-ebpf"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
urlencoding = "2"

[build-dependencies]
