[package]
name = "tspan-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
